--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "A wedding website with loads of features.",
   "main": "npmfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:rampatra/wedding-website.git"
+    "url": "git+ssh://git@github.com:killbom/weddingsite.git"
   },
   "keywords": [
     "wedding",
@@ -17,17 +14,12 @@
   ],
   "author": "Ram Patra",
   "license": "GPL-3.0",
-  "homepage": "https://github.com/rampatra/wedding-website",
+  "homepage": "https://github.com/killbom/weddingsite",
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.0"
-  },
-  "dependencies": {
-    "animate.css": "^3.5.2",
-    "font-awesome": "^4.7.0",
-    "waypoints": "^4.0.1"
   }
 }
